--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>自定义react脚手架</title>
-	<link rel="stylesheet" href="./css/bootstrap.css">
+	<link rel="stylesheet" href="/css/bootstrap.css">
 </head>
 <body>
 	<div id="root"></div>
